STITCH-1211, STITCH-1392 - Run tests on evergreen and lint
- Starting cleanup of tests and repo