@@ -1,66 +1,70 @@
+/*
+ * Copyright 2018-present MongoDB, Inc.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package com.mongodb.stitch.core.auth;
 
-import com.mongodb.stitch.core.mock.MockStitchUserIdentity;
-import com.mongodb.stitch.core.mock.MockStitchUserProfileImpl;
+import static org.junit.Assert.assertEquals;
+
 import com.mongodb.stitch.core.auth.internal.StitchUserProfileImpl;
-
-import org.bson.types.ObjectId;
-import org.junit.jupiter.api.Test;
-
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import org.bson.types.ObjectId;
+import org.junit.Test;
 
 public class StitchUserProfileUnitTests {
-    private static final String FIRST_NAME = "FIRST_NAME";
-    private static final String LAST_NAME = "LAST_NAME";
-    private static final String EMAIL = "EMAIL";
-    private static final String GENDER = "GENDER";
-    private static final String BIRTHDAY = "BIRTHDAY";
-    private static final String PICTURE_URL = "PICTURE_URL";
-    private static final String MIN_AGE = "42";
-    private static final String MAX_AGE = "84";
 
-    public static final Map<String, String> ANON_USER_DATA;
-    static {
-       final Map<String, String> document = new HashMap<>();
+  @Test
+  public void testStitchUserProfileImplInit() {
+    final String firstName = "FIRST_NAME";
+    final String lastName = "LAST_NAME";
+    final String email = "EMAIL";
+    final String gender = "GENDER";
+    final String birthday = "BIRTHDAY";
+    final String pictureUrl = "PICTURE_URL";
+    final String minAge = "42";
+    final String maxAge = "84";
 
-        document.put("first_name", FIRST_NAME);
-        document.put("last_name", LAST_NAME);
-        document.put("email", EMAIL);
-        document.put("gender", GENDER);
-        document.put("birthday", BIRTHDAY);
-        document.put("picture", PICTURE_URL);
-        document.put("min_age", MIN_AGE);
-        document.put("max_age", MAX_AGE);
+    final Map<String, String> data = new HashMap<>();
+    data.put("first_name", firstName);
+    data.put("last_name", lastName);
+    data.put("email", email);
+    data.put("gender", gender);
+    data.put("birthday", birthday);
+    data.put("picture", pictureUrl);
+    data.put("min_age", minAge);
+    data.put("max_age", maxAge);
 
-        ANON_USER_DATA = document;
-    }
+    final String providerType = "anon-user"; // TODO: Use constant
+    final StitchUserIdentity anonIdentity =
+        new StitchUserIdentity(new ObjectId().toHexString(), providerType);
 
-    @Test
-    void testStitchUserProfileImplInit() throws Exception {
-        final StitchUserIdentity anonIdentity =
-                new MockStitchUserIdentity(new ObjectId().toHexString(), "anon-user");
+    final StitchUserProfileImpl stitchUserProfileImpl =
+        new StitchUserProfileImpl("user", data, Collections.singletonList(anonIdentity));
 
-        final StitchUserProfileImpl stitchUserProfileImpl =
-                new MockStitchUserProfileImpl(
-                        "local-userpass",
-                        ANON_USER_DATA,
-                        Collections.singletonList(anonIdentity)
-                );
-
-        assertEquals(stitchUserProfileImpl.getFirstName(), FIRST_NAME);
-        assertEquals(stitchUserProfileImpl.getLastName(), LAST_NAME);
-        assertEquals(stitchUserProfileImpl.getEmail(), EMAIL);
-        assertEquals(stitchUserProfileImpl.getGender(), GENDER);
-        assertEquals(stitchUserProfileImpl.getBirthday(), BIRTHDAY);
-        assertEquals(stitchUserProfileImpl.getPictureURL(), PICTURE_URL);
-        assertEquals(stitchUserProfileImpl.getMinAge(), new Integer(MIN_AGE));
-        assertEquals(stitchUserProfileImpl.getMaxAge(), new Integer(MAX_AGE));
-        assertEquals(stitchUserProfileImpl.getUserType(), "local-userpass");
-        assertEquals(stitchUserProfileImpl.getIdentities().size(), 1);
-        assertEquals(stitchUserProfileImpl.getIdentities().get(0), anonIdentity);
-    }
+    assertEquals(stitchUserProfileImpl.getFirstName(), firstName);
+    assertEquals(stitchUserProfileImpl.getLastName(), lastName);
+    assertEquals(stitchUserProfileImpl.getEmail(), email);
+    assertEquals(stitchUserProfileImpl.getGender(), gender);
+    assertEquals(stitchUserProfileImpl.getBirthday(), birthday);
+    assertEquals(stitchUserProfileImpl.getPictureUrl(), pictureUrl);
+    assertEquals(stitchUserProfileImpl.getMinAge(), Integer.valueOf(minAge));
+    assertEquals(stitchUserProfileImpl.getMaxAge(), Integer.valueOf(maxAge));
+    assertEquals(stitchUserProfileImpl.getUserType(), "user");
+    assertEquals(stitchUserProfileImpl.getIdentities().size(), 1);
+    assertEquals(stitchUserProfileImpl.getIdentities().get(0), anonIdentity);
+  }
 }
